--- a/Parallel-Tempering/config.cfg
+++ b/Parallel-Tempering/config.cfg
@@ -19,8 +19,8 @@ periodic_boundary_conditions = false;
 reset_center_of_mass_to_origin = false;
 steps_between_resetting = 100;
 // PARALLEL TEMPERING
-parallel_tempering = false;
-amount_of_copies = 4;
+parallel_tempering = true;
+amount_of_copies = 2;
 temperature_spacing_factor = 1.1;
 threads_per_copy = 1;
 exchange_rate = 2000;
