--- a/Parallel-Tempering/config.cfg
+++ b/Parallel-Tempering/config.cfg
@@ -2,24 +2,24 @@
 // 0 for default values
 
 // GENERAL PROPERTIES
-amount_of_particles = 50;
+amount_of_particles = 512;
 timesteps = 200000;
 neighborlist_refresh_rate = 1;
 threads = 1;
 steps_before_dumping_values = 1;
-timestep = 0.002;
-temperature = 1.5;
+timestep = 0.001;
+temperature = 1.;
 mass = 1.;
-friction = 1.;
+friction = 2.;
 density = 0.6;
 cutoff_radius = 0.;
 seed = 5637.;
 // BOUNDARY CONDITIONS
-periodic_boundary_conditions = false;
+periodic_boundary_conditions = true;
 reset_center_of_mass_to_origin = false;
 steps_between_resetting = 100;
 // PARALLEL TEMPERING
-parallel_tempering = true;
+parallel_tempering = false;
 amount_of_copies = 2;
 temperature_spacing_factor = 1.1;
 threads_per_copy = 1;
@@ -29,17 +29,17 @@ initial_position_file = false;
 initial_position_filename = "positions.xyz";
 initial_velocity_file = false;
 initial_velocity_filename = "velocities.xyz";
-// EXTERNAL DOUBLE WELL POTENTIAL (a,b and s are multiplied by initial temp)
+// EXTERNAL DOUBLE WELL POTENTIAL
 // E = (b/w^4)*y^2*(y-w)^2 + (s/w)*y
-external_double_well_potential = true;
+external_double_well_potential = false;
 // s
 energy_difference_between_wells = 0.;
 // w
-location_second_well = 2.;
+location_second_well = 30.;
 // b
 height_between_wells = 30.;
 // OUTPUT
-output_positions = true;
+output_positions = false;
 output_positions_file = "positions.xyz";
 
 //TODO
