--- a/Parallel-Tempering/config.cfg
+++ b/Parallel-Tempering/config.cfg
@@ -3,14 +3,14 @@
 
 // GENERAL PROPERTIES
 amount_of_particles = 512;
-timesteps = 200000;
+timesteps = 100000;
 neighborlist_refresh_rate = 1;
 threads = 1;
 steps_before_dumping_values = 1;
 timestep = 0.001;
 temperature = 1.;
 mass = 1.;
-friction = 2.;
+friction = 0.;
 density = 0.6;
 cutoff_radius = 0.;
 seed = 5637.;
@@ -43,7 +43,7 @@ output_positions = false;
 output_positions_file = "positions.xyz";
 
 //TODO
-output_potential_energies = true;
+output_potential_energies = false;
 output_potential_energies_file = "energy";
 
 
