self guided langevin dynamics ongoing

--- a/Self-Guided-Langevin-Dynamics/config.cfg
+++ b/Self-Guided-Langevin-Dynamics/config.cfg
@@ -2,28 +2,28 @@
 // 0 for default values
 
 // GENERAL PROPERTIES (density has priority over sidelength)
-amount_of_particles = 1;
-timesteps = 2000000;
-neighborlist_refresh_rate = 10000000000;
+amount_of_particles = 10;
+timesteps = 100000;
+neighborlist_refresh_rate = 1;
 threads = 1;
 steps_before_dumping_values = 1;
-timestep = 0.005;
-temperature = 0.5;
+timestep = 0.002;
+temperature = 1.;
 mass = 1.;
-friction = 5.;
+friction = 1.;
 density = 0.;
 simulation_region_sidelength = 100.;
 cutoff_radius = 3.5; // 1.122462 for polymer
 seed = 927;
 // SELF GUIDED LANGEVIN DYNAMICS
 self_guided_langevin_dynamics = true;
-guiding_factor = 0.;
+guiding_factor = 0.2;
 local_average_time = 0.05;
 // POLYMER
 polymer = true;
 harmonic_potential = false;
 mean_bond_length = 2.; // Only for harmonic potential
-fene_potential = false;
+fene_potential = true;
 maximum_bond_length = 1.5; // Only for FENE potential
 spring_stiffness = 30.; // Only for FENE potential
 // BOUNDARY CONDITIONS
